@@ -10,6 +10,7 @@ Version 1.1.5 to be released
 - Bug #1577: Fixed the bug in CMssqlSchema::compareTableNames() (Qiang)
 - Bug #1592: Fixed the bug that the hidden field generated by CHtml::checkBox may have the same ID as the checkbox. (Qiang)
 - Bug #1615: Fixed the bug that caused CLogFilter::filter() to add context informations when the log was empty (Y!!)
+- Bug #1647: Fixed the bug that CActiveRelation may attempt to set an undefined 'together' property when merging with a criteria (Qiang)
 - Bug #1653: Fixed the bug that in PHP 5.3 CArrayDataProvider will fail due to incorrect parameters sent to array_multisort (Qiang)
 - Bug #1655: Fixed the bug in COciSchema about checking DB schema (Qiang)
 - Bug #1673: Fixed the bug that CDbSchema::getTables() might return null table schemas (Qiang)
